--- a/TravelApp/MainWindow.xaml
+++ b/TravelApp/MainWindow.xaml
@@ -47,6 +47,10 @@
                 <views:AgentReservationsView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewmodels:ClientReservationsViewModel}">
+                <views:ClientReservationsView/>
+            </DataTemplate>
+
         </Grid.Resources>
         <ContentControl Content="{Binding CurrentViewModel}" />
     </Grid>
