--- a/TravelApp/DesktopHost/View/Client/ClientReservationsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientReservationsView.xaml
@@ -106,7 +106,7 @@
                     <DataGrid.Resources>
                         <Style TargetType="DataGridColumnHeader">
                             <Setter Property="Background" Value="LightGray" />
-                            <Setter Property="Padding" Value="16" />
+                            <Setter Property="Padding" Value="30" />
                             <Setter Property="FontFamily" Value="Poppins" />
                         </Style>
 
@@ -134,6 +134,7 @@
                             <Setter Property="FontFamily" Value="Poppins" />
                             <Setter Property="HorizontalContentAlignment" Value="Center" />
                             <Setter Property="VerticalContentAlignment" Value="Center" />
+                            <Setter Property="Cursor" Value="Hand" />
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
@@ -184,17 +185,6 @@
                     </DataGrid.Resources>
 
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Passenger" Binding="{Binding Passenger}" IsReadOnly="True" Width="*" 
-                                SortMemberPath="Passenger" HeaderStyle="{StaticResource SortableColumnHeaderStyle}" >
-                            <DataGridTextColumn.ElementStyle>
-                                <Style TargetType="TextBlock">
-                                    <Setter Property="Padding" Value="16" />
-                                    <Setter Property="FontFamily" Value="Poppins" />
-                                        <Setter Property="HorizontalAlignment" Value="Center"/>
-                                    </Style>
-                            </DataGridTextColumn.ElementStyle>
-                        </DataGridTextColumn>
-                        
                         <DataGridTextColumn Header="Trip" Binding="{Binding Trip}" IsReadOnly="True" Width="*" 
                                 SortMemberPath="Trip" HeaderStyle="{StaticResource SortableColumnHeaderStyle}" >
                             <DataGridTextColumn.ElementStyle>
@@ -216,8 +206,16 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Header="Start date" Binding="{Binding StartDate}" IsReadOnly="True" Width="*" 
+                        
+                        <DataGridTextColumn Binding="{Binding StartDate, StringFormat='{}{0:d}'}" IsReadOnly="True" Width="*" 
                                 SortMemberPath="StartDate" HeaderStyle="{StaticResource SortableColumnHeaderStyle}" >
+                            <DataGridTextColumn.Header>
+                                <DataGridColumnHeader Content="Start date">
+                                    <DataGridColumnHeader.ToolTip>
+                                        <ToolTip Content="Date format is MM/dd/yyyy" />
+                                    </DataGridColumnHeader.ToolTip>
+                                </DataGridColumnHeader>
+                            </DataGridTextColumn.Header>
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Padding" Value="16" />
@@ -226,8 +224,16 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Header="End date" Binding="{Binding EndDate}" IsReadOnly="True" Width="*" 
+                        
+                        <DataGridTextColumn Binding="{Binding EndDate, StringFormat='{}{0:d}'}" IsReadOnly="True" Width="*" 
                                 SortMemberPath="EndDate" HeaderStyle="{StaticResource SortableColumnHeaderStyle}" >
+                            <DataGridTextColumn.Header>
+                                <DataGridColumnHeader Content="End date">
+                                    <DataGridColumnHeader.ToolTip>
+                                        <ToolTip Content="Date format is MM/dd/yyyy" />
+                                    </DataGridColumnHeader.ToolTip>
+                                </DataGridColumnHeader>
+                            </DataGridTextColumn.Header>
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Padding" Value="16" />
@@ -236,6 +242,7 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
+                        
                     </DataGrid.Columns>
                 </DataGrid>
             </materialDesign:Card>
