--- a/TravelApp/DesktopHost/View/Agent/AgentTripsView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentTripsView.xaml
@@ -172,10 +172,11 @@
 
                                     <TextBlock
                                         Grid.Row="4"
-                                        Width="200"
-                                        Text="20000"
-                                        HorizontalAlignment="Left"
-                                        Margin="180 0 40 20"
+                                        Width="180"
+                                        Text="{Binding Price}"
+                                        HorizontalAlignment="Center"
+                                        TextAlignment="Right"
+                                        Margin="180 0 100 20"
                                         FontSize="35"
                                         Foreground="#1E2F97"
                                         FontWeight="SemiBold"
