--- a/TravelApp/MainWindow.xaml
+++ b/TravelApp/MainWindow.xaml
@@ -30,6 +30,9 @@
             <DataTemplate DataType="{x:Type viewmodels:AgentTripsViewModel}">
                 <views:AgentTripsView/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewmodels:ClientTripsViewModel}">
+                <views:ClientTripsView/>
+            </DataTemplate>
         </Grid.Resources>
         <ContentControl Content="{Binding CurrentViewModel}" />
     </Grid>
