--- a/TravelApp/DesktopHost/View/Client/ClientTripsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientTripsView.xaml
@@ -17,6 +17,7 @@
             <RowDefinition Height="1*" />
             <RowDefinition Height="4*" />
         </Grid.RowDefinitions>
+        <components:ClientNavigationView Grid.Row="0" SelectedIndex="0"></components:ClientNavigationView>
 
 
         <Grid Grid.Row="1">
@@ -156,7 +157,7 @@
                                         Text="{Binding Price}"
                                         HorizontalAlignment="Center"
                                         TextAlignment="Right"
-                                        Margin="180 0 100 20"
+                                        Margin="180 10 100 20"
                                         FontSize="35"
                                         Foreground="#1E2F97"
                                         FontWeight="SemiBold"
@@ -165,7 +166,7 @@
                                         Grid.Row="4"
                                         Text="RSD"
                                         HorizontalAlignment="Right"
-                                        Margin="0 0 30 20"
+                                        Margin="0 10 30 20"
                                         FontSize="35"
                                         Foreground="#1E2F97"
                                         FontWeight="SemiBold"
