--- a/TravelApp/DesktopHost/View/Navigation/ClientNavigationView.xaml
+++ b/TravelApp/DesktopHost/View/Navigation/ClientNavigationView.xaml
@@ -1,14 +1,12 @@
 ﻿<UserControl x:Class="TravelApp.DesktopHost.View.ClientNavigationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TravelApp.DesktopHost.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:navigation="clr-namespace:TravelApp.DesktopHost.ViewModel.Navigation"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewmodel="clr-namespace:TravelApp.DesktopHost.ViewModel"
+             mc:Ignorable="d"
+             d:DesignHeight="450" d:DesignWidth="800"
              SizeChanged="Window_SizeChanged"
              d:DataContext="{d:DesignInstance Type=viewmodel:ClientNavigationViewModel}">
 
@@ -27,7 +25,7 @@
                 <StackPanel Width="{ Binding Navigation.TabWidth }"
                             Height="auto">
                     <Button 
-                        HorizontalContentAlignment="Center"
+                        HorizontalContentAlignment="Left"
                         VerticalContentAlignment="Center"
                         Width="{ Binding Navigation.TabWidth }"
                         Height="40"
@@ -47,7 +45,7 @@
                 <StackPanel Width="{ Binding Navigation.TabWidth }"
                             Height="auto">
                     <Button 
-                        HorizontalContentAlignment="Center"
+                        HorizontalContentAlignment="Left"
                         VerticalContentAlignment="Center"
                         Width="{ Binding Navigation.TabWidth }"
                         Height="40"
@@ -68,7 +66,7 @@
                 <StackPanel Width="{ Binding Navigation.TabWidth }"
                             Height="auto">
                     <Button 
-                        HorizontalContentAlignment="Center"
+                        HorizontalContentAlignment="Left"
                         VerticalContentAlignment="Center"
                         Width="{ Binding Navigation.TabWidth }"
                         Height="40"
@@ -89,7 +87,7 @@
                 <StackPanel Width="{ Binding Navigation.TabWidth }"
                             Height="auto">
                     <Button
-                        HorizontalContentAlignment="Center"
+                        HorizontalContentAlignment="Left"
                         VerticalContentAlignment="Center"
                         Width="{ Binding Navigation.TabWidth }"
                         Height="40"
@@ -110,7 +108,7 @@
                 <StackPanel Width="{ Binding Navigation.TabWidth }"
                             Height="auto">
                     <Button 
-                        HorizontalContentAlignment="Center"
+                        HorizontalContentAlignment="Left"
                         VerticalContentAlignment="Center"
                         Width="{ Binding Navigation.TabWidth }"
                         Height="40"
@@ -132,7 +130,7 @@
                 <StackPanel Width="{ Binding Navigation.TabWidth }"
                             Height="auto">
                     <Button 
-                        HorizontalContentAlignment="Center"
+                        HorizontalContentAlignment="Left"
                         VerticalContentAlignment="Center"
                         Width="{ Binding Navigation.TabWidth }"
                         Height="40"
@@ -154,8 +152,9 @@
                 <StackPanel Width="{ Binding Navigation.TabWidth }"
                             Height="auto">
                     <Button 
-                        HorizontalContentAlignment="Center"
+                        HorizontalContentAlignment="Right"
                         VerticalContentAlignment="Center"
+                        Padding="0 0 30 0"
                         Width="{ Binding Navigation.TabWidth }"
                         Height="40"
                         Content="Log Out"
