--- a/TravelApp/DesktopHost/View/Agent/AgentReservationsView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentReservationsView.xaml
@@ -16,7 +16,9 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="1*" />
+                <RowDefinition Height="auto" />
                 <RowDefinition Height="4*" />
+                <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
             <components:AgentNavigationView Grid.Row="0" SelectedIndex="4"></components:AgentNavigationView>
 
@@ -34,8 +36,7 @@
                             FontSize="{Binding TextSize}"
                             FontWeight="Medium"
                             VerticalAlignment="Center"
-                            FontFamily="Poppins"
-                            MaxWidth="439"/>
+                            FontFamily="Poppins" />
 
                 <WrapPanel Grid.Column="3" VerticalAlignment="Center">
                     <Border Width="200" Height="30" Background="White" BorderBrush="Gray" BorderThickness="1" CornerRadius="15" >
@@ -47,6 +48,11 @@
                             <materialDesign:PackIcon Grid.Column="0" Kind="Magnify" VerticalAlignment="Center" Margin="5" />
                             <Grid Grid.Column="1">
                                 <TextBox x:Name="myTextBox" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" FontFamily="Poppins" MaxLength="60" Cursor="IBeam" Background="Transparent" BorderThickness="0" Padding="5" VerticalContentAlignment="Center" FontSize="14" Foreground="Black" >
+                                    <TextBox.ToolTip>
+                                        <ToolTip>
+                                            <TextBlock Text="Input Your search text" />
+                                        </ToolTip>
+                                    </TextBox.ToolTip>
                                     <TextBox.Style>
                                         <Style TargetType="TextBox">
                                             <Setter Property="Template">
@@ -84,10 +90,10 @@
                 </WrapPanel>
             </Grid>
 
-            <materialDesign:Card Grid.Row="2" Background="White" Padding="16" HorizontalAlignment="Center">
+            <materialDesign:Card Grid.Row="3" Background="White" Padding="16" HorizontalAlignment="Center">
                 <DataGrid ItemsSource="{Binding FilteredItems}"
                           Width="{Binding TableWidth}"
-                          RowHeight="50"
+                          RowHeight="55"
                           AutoGenerateColumns="False"
                           CanUserAddRows="False"
                           CanUserDeleteRows="False"
@@ -103,7 +109,7 @@
                     <DataGrid.ColumnHeaderStyle>
                         <Style TargetType="DataGridColumnHeader">
                             <Setter Property="Background" Value="LightGray" />
-                            <Setter Property="Padding" Value="16" />
+                            <Setter Property="Padding" Value="30" />
                             <Setter Property="FontFamily" Value="Poppins" />
                         </Style>
                     </DataGrid.ColumnHeaderStyle>
@@ -125,15 +131,67 @@
                             </Style.Triggers>
                         </Style>
 
-                        <Style TargetType="DataGridColumnHeader">
+                        <Style x:Key="SortIconStyle" TargetType="Path">
+                            <Setter Property="Width" Value="8" />
+                            <Setter Property="Height" Value="6" />
+                            <Setter Property="Stretch" Value="Fill" />
+                            <Setter Property="Data" Value="M0,0 L1,0 0.5,1 Z" />
+                            <Setter Property="Fill" Value="Black" />
+                            <Setter Property="RenderTransformOrigin" Value="0.5, 0.5" />
+
+                            <Style.Triggers>
+                                <EventTrigger RoutedEvent="Loaded">
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(RotateTransform.Angle)" Duration="0:0:0.4" From="0" To="180" AutoReverse="True" RepeatBehavior="Forever" />
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </EventTrigger>
+                            </Style.Triggers>
+                        </Style>
+
+                        <Style x:Key="SortableColumnHeaderStyle" TargetType="DataGridColumnHeader">
                             <Setter Property="Background" Value="LightGray" />
-                            <Setter Property="Padding" Value="16" />
                             <Setter Property="FontFamily" Value="Poppins" />
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                            <Setter Property="VerticalContentAlignment" Value="Center" />
+                            <Setter Property="Cursor" Value="Hand" />
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*" />
+                                                <ColumnDefinition Width="auto" />
+                                            </Grid.ColumnDefinitions>
+                                            <ContentPresenter Grid.Column="0" VerticalAlignment="Center" Margin="20"/>
+                                            <Path x:Name="SortArrow" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="{Binding DataContext.ArrowMargin, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" Style="{StaticResource SortIconStyle}" />
+                                        </Grid>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="SortDirection" Value="Ascending">
+                                                <Setter TargetName="SortArrow" Property="Visibility" Value="Visible" />
+                                                <Setter TargetName="SortArrow" Property="RenderTransform">
+                                                    <Setter.Value>
+                                                        <RotateTransform Angle="180" />
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </Trigger>
+                                            <Trigger Property="SortDirection" Value="Descending">
+                                                <Setter TargetName="SortArrow" Property="Visibility" Value="Visible" />
+                                            </Trigger>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="LightGray" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
                         </Style>
                     </DataGrid.Resources>
 
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Passenger" Binding="{Binding Passenger}" IsReadOnly="True" Width="*" >
+                        <DataGridTextColumn Header="Passenger" Binding="{Binding Passenger}" IsReadOnly="True" Width="*" 
+                                            SortMemberPath="Passenger" HeaderStyle="{StaticResource SortableColumnHeaderStyle}" >
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Padding" Value="16" />
@@ -142,44 +200,66 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Header="Trip" Binding="{Binding Trip}" IsReadOnly="True" Width="*" >
-                            <DataGridTextColumn.ElementStyle>
-                                <Style TargetType="TextBlock">
-                                    <Setter Property="Padding" Value="16" />
-                                    <Setter Property="FontFamily" Value="Poppins" />
-                                    <Setter Property="VerticalAlignment" Value="Center" />
-                                </Style>
-                            </DataGridTextColumn.ElementStyle>
-                        </DataGridTextColumn>
-                        <DataGridTextColumn Header="Price" Binding="{Binding Price}" IsReadOnly="True" Width="*" >
-                            <DataGridTextColumn.ElementStyle>
-                                <Style TargetType="TextBlock">
-                                    <Setter Property="Padding" Value="16" />
-                                    <Setter Property="FontFamily" Value="Poppins" />
-                                    <Setter Property="VerticalAlignment" Value="Center" />
-                                </Style>
-                            </DataGridTextColumn.ElementStyle>
-                        </DataGridTextColumn>
-                        <DataGridTextColumn Header="Start date" Binding="{Binding StartDate, StringFormat='{}{0:d}'}" IsReadOnly="True" Width="*" >
-                            <DataGridTextColumn.ElementStyle>
-                                <Style TargetType="TextBlock">
-                                    <Setter Property="Padding" Value="16" />
-                                    <Setter Property="FontFamily" Value="Poppins" />
-                                    <Setter Property="VerticalAlignment" Value="Center" />
-                                </Style>
-                            </DataGridTextColumn.ElementStyle>
-                        </DataGridTextColumn>
-                        <DataGridTextColumn Header="End date" Binding="{Binding EndDate, StringFormat='{}{0:d}'}" IsReadOnly="True" Width="*" >
-                            <DataGridTextColumn.ElementStyle>
-                                <Style TargetType="TextBlock">
-                                    <Setter Property="Padding" Value="16" />
-                                    <Setter Property="FontFamily" Value="Poppins" />
-                                    <Setter Property="VerticalAlignment" Value="Center" />
-                                </Style>
-                            </DataGridTextColumn.ElementStyle>
-                        </DataGridTextColumn>
-                    </DataGrid.Columns>
 
+                        <DataGridTextColumn Header="Trip" Binding="{Binding Trip}" IsReadOnly="True" Width="*" 
+                                            SortMemberPath="Trip" HeaderStyle="{StaticResource SortableColumnHeaderStyle}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="Padding" Value="16" />
+                                    <Setter Property="FontFamily" Value="Poppins" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
+                        <DataGridTextColumn Header="Price (RSD)" Binding="{Binding Price}" IsReadOnly="True" Width="*" 
+                                            SortMemberPath="Price" HeaderStyle="{StaticResource SortableColumnHeaderStyle}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="Padding" Value="16" />
+                                    <Setter Property="FontFamily" Value="Poppins" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
+                        <DataGridTextColumn Binding="{Binding StartDate, StringFormat='{}{0:d}'}" IsReadOnly="True" Width="*" 
+                                            SortMemberPath="StartDate" HeaderStyle="{StaticResource SortableColumnHeaderStyle}" >
+                            <DataGridTextColumn.Header>
+                                <DataGridColumnHeader Content="Start date">
+                                    <DataGridColumnHeader.ToolTip>
+                                        <ToolTip Content="Date format is MM/dd/yyyy" />
+                                    </DataGridColumnHeader.ToolTip>
+                                </DataGridColumnHeader>
+                            </DataGridTextColumn.Header>
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="Padding" Value="16" />
+                                    <Setter Property="FontFamily" Value="Poppins" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
+                        <DataGridTextColumn Binding="{Binding EndDate, StringFormat='{}{0:d}'}" IsReadOnly="True" Width="*" 
+                                            SortMemberPath="EndDate" HeaderStyle="{StaticResource SortableColumnHeaderStyle}" >
+                            <DataGridTextColumn.Header>
+                                <DataGridColumnHeader Content="End date">
+                                    <DataGridColumnHeader.ToolTip>
+                                        <ToolTip Content="Date format is MM/dd/yyyy" />
+                                    </DataGridColumnHeader.ToolTip>
+                                </DataGridColumnHeader>
+                            </DataGridTextColumn.Header>
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="Padding" Value="16" />
+                                    <Setter Property="FontFamily" Value="Poppins" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
+                    </DataGrid.Columns>
                 </DataGrid>
             </materialDesign:Card>
         </Grid>
