--- a/TravelApp/DesktopHost/View/Agent/AgentStayEatView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentStayEatView.xaml
@@ -39,15 +39,6 @@
                             MaxWidth="439" />
 
                 <WrapPanel Grid.Column="2" VerticalAlignment="Center" >
-                    <Button Cursor="Hand" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Padding="2" Margin="0 0 30 0">
-                        <StackPanel Orientation="Horizontal">
-                            <Viewbox Width="25" Height="25">
-                                <materialDesign:PackIcon Kind="Plus" VerticalAlignment="Center" />
-                            </Viewbox>
-                            <TextBlock Text="Add place" FontFamily="Poppins" Grid.Column="1" Padding="5"  VerticalAlignment="Center" FontSize="20" Foreground="Black" TextDecorations="Underline"/>
-                        </StackPanel>
-                    </Button>
-
                     <Border Width="200" Height="30" Background="White" BorderBrush="Gray" BorderThickness="1" CornerRadius="15">
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -57,6 +48,11 @@
                             <materialDesign:PackIcon Grid.Column="0" Kind="Magnify" VerticalAlignment="Center" Margin="5" />
                             <Grid Grid.Column="1">
                                 <TextBox x:Name="myTextBox" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Cursor="IBeam" FontFamily="Poppins" MaxLength="60" Background="Transparent" BorderThickness="0" Padding="5" VerticalContentAlignment="Center" FontSize="14" Foreground="Black" >
+                                    <TextBox.ToolTip>
+                                        <ToolTip>
+                                            <TextBlock Text="Input Your search text" />
+                                        </ToolTip>
+                                    </TextBox.ToolTip>
                                     <TextBox.Style>
                                         <Style TargetType="TextBox">
                                             <Setter Property="Template">
@@ -91,13 +87,22 @@
                             </Grid>
                         </Grid>
                     </Border>
+
+                    <Button Cursor="Hand"  Padding="2" Background="#DFE6F0" BorderBrush="#DFE6F0" BorderThickness="1" Foreground="Black" Margin="30 0 0 0" ToolTip="Create a new place">
+                        <StackPanel Orientation="Horizontal">
+                            <Viewbox Width="25" Height="25">
+                                <materialDesign:PackIcon Kind="Plus" VerticalAlignment="Center"/>
+                            </Viewbox>
+                            <TextBlock Text="Add place" FontFamily="Poppins" Grid.Column="1" Padding="5"  VerticalAlignment="Center" FontSize="20" Foreground="Black" TextDecorations="Underline"/>
+                        </StackPanel>
+                    </Button>
                 </WrapPanel>
             </Grid>
 
             <materialDesign:Card Grid.Row="2" Background="White" Padding="16" HorizontalAlignment="Center">
                 <DataGrid x:Name="MyDataGrid" ItemsSource="{Binding FilteredItems}"
                           Width="{Binding TableWidth}"
-                          RowHeight="50"
+                          RowHeight="55"
                           HorizontalAlignment="Center"
                           AutoGenerateColumns="False"
                           CanUserAddRows="False"
@@ -112,17 +117,69 @@
                           BorderThickness="0"
                           SelectionMode="Single">
 
-                    <DataGrid.ColumnHeaderStyle>
+                    <DataGrid.Resources>
                         <Style TargetType="DataGridColumnHeader">
                             <Setter Property="Background" Value="LightGray" />
-                            <Setter Property="Padding" Value="16" />
+                            <Setter Property="Padding" Value="23" />
                             <Setter Property="FontFamily" Value="Poppins" />
                         </Style>
-                    </DataGrid.ColumnHeaderStyle>
 
-                    <DataGrid.Resources>
-                        <SolidColorBrush x:Key="MaterialDesignSelection" Color="Transparent" />
-                        <SolidColorBrush x:Key="MaterialDesignSelectionForeground" Color="	#5A5A5A" />
+                        <Style x:Key="SortIconStyle" TargetType="Path">
+                            <Setter Property="Width" Value="8" />
+                            <Setter Property="Height" Value="6" />
+                            <Setter Property="Stretch" Value="Fill" />
+                            <Setter Property="Data" Value="M0,0 L1,0 0.5,1 Z" />
+                            <Setter Property="Fill" Value="Black" />
+                            <Setter Property="RenderTransformOrigin" Value="0.5, 0.5" />
+
+                            <Style.Triggers>
+                                <EventTrigger RoutedEvent="Loaded">
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(RotateTransform.Angle)" Duration="0:0:0.4" From="0" To="180" AutoReverse="True" RepeatBehavior="Forever" />
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </EventTrigger>
+                            </Style.Triggers>
+                        </Style>
+
+                        <Style x:Key="SortableColumnHeaderStyle" TargetType="DataGridColumnHeader">
+                            <Setter Property="Background" Value="LightGray" />
+                            <Setter Property="FontFamily" Value="Poppins" />
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                            <Setter Property="VerticalContentAlignment" Value="Center" />
+                            <Setter Property="Cursor" Value="Hand" />
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*" />
+                                                <ColumnDefinition Width="Auto" />
+                                            </Grid.ColumnDefinitions>
+                                            <ContentPresenter Grid.Column="0" VerticalAlignment="Center" Margin="20"/>
+                                            <Path x:Name="SortArrow" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="{Binding DataContext.ArrowMargin, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" Style="{StaticResource SortIconStyle}" />
+                                        </Grid>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="SortDirection" Value="Ascending">
+                                                <Setter TargetName="SortArrow" Property="Visibility" Value="Visible" />
+                                                <Setter TargetName="SortArrow" Property="RenderTransform">
+                                                    <Setter.Value>
+                                                        <RotateTransform Angle="180" />
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </Trigger>
+                                            <Trigger Property="SortDirection" Value="Descending">
+                                                <Setter TargetName="SortArrow" Property="Visibility" Value="Visible" />
+                                            </Trigger>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="LightGray" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
 
                         <Style TargetType="DataGridCell">
                             <Setter Property="BorderThickness" Value="0" />
@@ -134,43 +191,51 @@
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
-
-                        <Style TargetType="DataGridColumnHeader">
-                            <Setter Property="Background" Value="LightGray" />
-                            <Setter Property="Padding" Value="16" />
-                            <Setter Property="FontFamily" Value="Poppins" />
-                        </Style>
                     </DataGrid.Resources>
 
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Name" Binding="{Binding Name}" IsReadOnly="True" Width="1.5*">
+                        <DataGridTextColumn Header="Name" Binding="{Binding Name}" IsReadOnly="True" Width="1.5*"
+                                            SortMemberPath="Name" HeaderStyle="{StaticResource SortableColumnHeaderStyle}">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Padding" Value="16" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="FontFamily" Value="Poppins" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Header="Address" Binding="{Binding Address}" IsReadOnly="True" Width="2*">
+
+                        <DataGridTextColumn Header="Address" Binding="{Binding Address}" IsReadOnly="True" Width="2*"
+                                            SortMemberPath="Address" HeaderStyle="{StaticResource SortableColumnHeaderStyle}">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Padding" Value="16" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="FontFamily" Value="Poppins" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Header="Type" Binding="{Binding Type}" IsReadOnly="True" Width="*">
+
+                        <DataGridTextColumn Header="Type" Binding="{Binding Type}" IsReadOnly="True" Width="*"
+                                            SortMemberPath="Type" HeaderStyle="{StaticResource SortableColumnHeaderStyle}">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Padding" Value="16" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="FontFamily" Value="Poppins" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
+
                         <DataGridTemplateColumn Header="Link" Width="1*">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Padding="16" FontFamily="Poppins">
+                                    <TextBlock Padding="16" FontFamily="Poppins" VerticalAlignment="Center" FontSize="15">
+                                        <TextBlock.ToolTip>
+                                            <ToolTip>
+                                                <TextBlock Text="Visit us on the web" />
+                                            </ToolTip>
+                                        </TextBlock.ToolTip>
                                         <Hyperlink NavigateUri="{Binding Link}" RequestNavigate="Hyperlink_RequestNavigate">
                                             <Hyperlink.Style>
                                                 <Style TargetType="Hyperlink">
@@ -188,14 +253,21 @@
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
+
+                        <DataGridTemplateColumn Header="Delete">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Command="{Binding DataContext.Delete, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" Cursor="Hand" Background="#4889E6" BorderBrush="#4889E6" BorderThickness="1" Margin="0 0 5 0" ToolTip="Delete item"
+                                            CommandParameter="{Binding SelectedItem, ElementName=MyDataGrid}">
+                                        <materialDesign:PackIcon Kind="Delete" Width="16" Height="16" />
+                                    </Button>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+
                     </DataGrid.Columns>
                 </DataGrid>
             </materialDesign:Card>
-
-            <Button Grid.Row="3" Width="200" Height="30" Content="Delete" Background="#4889E6" BorderBrush="#4889E6" BorderThickness="1"
-                    Command="{Binding Delete}"
-                    CommandParameter="{Binding SelectedItem, ElementName=MyDataGrid}"/>
-
         </Grid>
     </Grid>
 </UserControl>
