--- a/TravelApp/DesktopHost/View/Client/ClientReservationsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientReservationsView.xaml
@@ -88,7 +88,7 @@
             <materialDesign:Card Grid.Row="3" Background="White" Padding="16" HorizontalAlignment="Center">
                 <DataGrid x:Name="MyDataGrid" ItemsSource="{Binding FilteredItems}"
                           Width="{Binding TableWidth}"
-                          RowHeight="50"
+                          RowHeight="55"
                           AutoGenerateColumns="False"
                           CanUserAddRows="False"
                           CanUserDeleteRows="False"
@@ -142,7 +142,7 @@
                                                 <ColumnDefinition Width="*" />
                                                 <ColumnDefinition Width="Auto" />
                                             </Grid.ColumnDefinitions>
-                                            <ContentPresenter Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                                            <ContentPresenter Grid.Column="0" VerticalAlignment="Center" Margin="20" />
                                             <Path x:Name="SortArrow" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="{Binding DataContext.ArrowMargin, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" Style="{StaticResource SortIconStyle}" />
                                         </Grid>
                                         <ControlTemplate.Triggers>
@@ -185,7 +185,7 @@
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Padding" Value="16" />
                                     <Setter Property="FontFamily" Value="Poppins" />
-                                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                                    <Setter Property="VerticalAlignment" Value="Center" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
@@ -196,7 +196,7 @@
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Padding" Value="16" />
                                     <Setter Property="FontFamily" Value="Poppins" />
-                                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                                    <Setter Property="VerticalAlignment" Value="Center" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
@@ -214,7 +214,7 @@
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Padding" Value="16" />
                                     <Setter Property="FontFamily" Value="Poppins" />
-                                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                                    <Setter Property="VerticalAlignment" Value="Center" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
@@ -232,7 +232,7 @@
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Padding" Value="16" />
                                     <Setter Property="FontFamily" Value="Poppins" />
-                                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                                    <Setter Property="VerticalAlignment" Value="Center" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
